# terminusdm

./: .gitignore  Cargo.toml  README.md
src/: begin_download.rs  config.rs  file_fn.rs  lib.rs  main.rs  merge_file.rs  req_lib.rs  sort_files.rs  tui.rs  user_interface.rs  utils.rs  validate_merge.rs  words.rs
src/begin_download/: trauma.rs
src/begin_download/trauma/: download.rs  downloader.rs
src/tui/: app.rs  event_tui.rs  history.rs  main_layout.rs
src/tui/app/: history.rs  table.rs  tabs_state.rs
src/tui/event_tui/: event_tab.rs
src/tui/main_layout/: body_tui.rs  download_popup.rs  error_popup.rs  footer_tui.rs  header_tui.rs  table_layout.rs  tabs_layout.rs
src/tui/main_layout/footer_tui/: text_footer.rs
src/tui/main_layout/tabs_layout/: lang_layout.rs
src/user_interface/: app.rs  cursor.rs  event.rs  handler.rs  tui.rs
src/user_interface/app/: history.rs  table.rs  tabs_state.rs  ui.rs
src/user_interface/app/ui/: footer_components.rs  music_list_components.rs  playback_component.rs  playlist_components.rs  pop_up.rs  volume_component.rs
src/user_interface/app/ui/pop_up/: confirm_popup.rs  help_popup.rs  pop_up_plylist.rs
src/user_interface/handler/: handle_confirm.rs  handle_d.rs  handle_enter.rs  handle_left_right.rs  handle_plus_minus.rs  handle_space.rs  handle_up_down.rs  input_playlist_handler.rs  insert_playlist_song.rs  play.rs
src/utils/: fs_utils.rs  to_vec.rs
