[package]
name = "tdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For exploratory dev.

[dependencies]
dirs = "5.0.1"
eyre = "0.6.12"
reqwest = "0.11.25"
tokio = { version = "1.36.0", features = ["full"] }
form_urlencoded = "1.2.1"
trauma ={ git = 'https://github.com/sumoduduk/trauma.git', rev = '267a1d886d5aa809eda02e1bdb425039285d55db'}
