[package]
name = "terminusdm"
version = "1.0.2"
edition = "2021"
license = "GPL-3.0-or-later"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENSE"
]
homepage = "https://github.com/sumoduduk/terminusdm"
description = "Terminus Download Manager. Download files, resume interrupted downloads, and keep a history of your downloads - within terminal UI. "
repository = "https://github.com/sumoduduk/terminusdm"
keywords = [
	"cli",
  "terminal-ui",
  "download-manager",
  "resumable-download"
]
categories = ["asynchronous", "command-line-utilities", "concurrency", "filesystem"]
authors = ["Iqbal Abdurachman <email@abdurachmaniqbal.my.id>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "s"
lto  = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For exploratory dev.

[dependencies]
dirs = "5.0.1"
futures = "0.3.25"
indicatif = "0.17.3"
eyre = "0.6.12"
reqwest = { version = "0.11.24", features = ["stream", "socks"] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
tokio = { version = "1.36.0", features = ["full"] }
form_urlencoded = "1.2.1"
crossterm = "0.27.0"
ratatui = { version = "0.26.1", features = ["all-widgets"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tui-input = "0.8.0"
ron = "0.8.1"
indexmap = { version ="2.2.6", features = ["serde"] }
strum = { version = "0.26.2", features = ["derive"] }
throbber-widgets-tui = "0.5.0"
thiserror = "1.0.38"


